real-project/tensorflow/test-lambda/classification_results/non_compilable/test_93.cpp.log
/home/anonymous/compare-order/real-project/tensorflow/test-lambda/test_93.cpp:33:28: error: 'this' argument to member function 'getDefiningOp' has type 'const Value', but function is not marked const
   33 |   Operation *producerOpA = a.targetValue.getDefiningOp();
      |                            ^~~~~~~~~~~~~
/home/anonymous/compare-order/real-project/tensorflow/test-lambda/test_93.cpp:11:16: note: 'getDefiningOp' declared here
   11 |     Operation* getDefiningOp();
      |                ^
/home/anonymous/compare-order/real-project/tensorflow/test-lambda/test_93.cpp:34:28: error: 'this' argument to member function 'getDefiningOp' has type 'const Value', but function is not marked const
   34 |   Operation *producerOpB = b.targetValue.getDefiningOp();
      |                            ^~~~~~~~~~~~~
/home/anonymous/compare-order/real-project/tensorflow/test-lambda/test_93.cpp:11:16: note: 'getDefiningOp' declared here
   11 |     Operation* getDefiningOp();
      |                ^
2 errors generated.
